syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

import "Enum.proto";

message StatInfo 
{
    float maxHp = 1;
    float hp = 2;
    float hpRegen = 3;
    float maxMp = 4;
    float mp = 5;
    float mpRegen = 6;
    float attack = 7;
    float defence = 8;
    float dodge = 9;
    float attackSpeed = 10;
    float moveSpeed = 11;
    float criRate = 12;
    float criDamage = 13;
    int32 str = 14;
    int32 dex = 15;
    int32 int = 16;
    int32 con = 17;
    int32 wis = 18;
}

message PositionInfo 
{
	EObjectState state = 1;
	EMoveDir moveDir = 2;
	int32 roomId = 3;
	int32 posX = 4;
	int32 posY = 5;
}

message ObjectInfo 
{
	int32 objectId = 1;
	PositionInfo posInfo = 2;
}

message ProjectileInfo
{
	ObjectInfo objectInfo = 1;
	int32 targetId = 2;
	int32 ownerId =3;
}

message CreatureInfo 
{
	ObjectInfo objectInfo = 1;
	StatInfo totalStatInfo = 2;
	int32 stateFlag = 3;
}

message HeroInfo
{
	CreatureInfo creatureInfo = 1;
	int32 level = 2;
	string name = 3;
	EHeroGender gender = 4;
	EHeroClass classType = 5;
}

message MyHeroInfo
{
	HeroInfo heroInfo = 1;
	int32 exp = 2;
	int32 mapId = 3;
	CurrencyInfo currencyInfo = 5;
}

message CurrencyInfo 
{
	int32 gold = 1;
	int32 dia = 2;
}

message SkillCoolTime 
{
	int32 skillId = 1;
	int32 remainingTicks = 2;
}

message ItemInfo 
{
	int64 itemDbId = 1;
	int32 templateId = 2;
	EItemSlotType itemSlotType = 3;
	int32 count = 4;	
	int32 remainingTicks = 5;
}

message QuestObjective
{
	int32 ObjectiveDataId = 1;
	int32 ObjectiveCount = 2;
}